--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
+    "@reduxjs/toolkit": "^1.9.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
+    "formik": "^2.2.9",
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.3"
+    "react-hook-form": "^7.39.4",
+    "react-redux": "^8.0.5",
+    "typescript": "4.9.3",
+    "yup": "^0.32.11"
   }
 }
