--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "formik": "^2.2.9",
     "next": "13.0.4",
     "react": "18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.4",
     "react-redux": "^8.0.5",
