--- a/package.json
+++ b/package.json
@@ -29,12 +29,11 @@
     "react-hook-form": "^7.39.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
-    "react-scroll": "^1.8.8",
     "sass": "^1.56.1",
+    "smooth-scroll": "^16.1.3",
     "typescript": "4.9.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/react-scroll": "^1.8.5"
   }
 }
