--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.4",
     "react-redux": "^8.0.5",
+    "sass": "^1.56.1",
     "typescript": "4.9.3",
     "yup": "^0.32.11"
   }
